Jenkins release job update
Signed-off-by: Maxim Nesen <maxim.nesen@oracle.com>